kuber-helm/nodePort-grafana.yaml
kind: Service
apiVersion: v1
metadata:
  name: grafana-np
  namespace: monitor
spec:
  selector:
    app.kubernetes.io/instance: monitor
    app.kubernetes.io/name: grafana
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30000
