kuber-helm/nodePort-prometheus.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-np
spec:
  selector:
    app.kubernetes.io/name: prometheus
  type: NodePort
  ports:
    - port: 9090
      #destination port
      targetPort: 9090
