kuber-helm/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: grafana.local
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: monitoring-1-grafana
                port:
                  number: 80
